added update and create lectures
